# unexceptionalio

./: .travis.yml  COPYING  Makefile  README  SafeIO.hs  UnexceptionalIO.hs  unexceptionalio.cabal
tests/: suite.hs
