name:            unexceptionalio
version:         0.3.0
cabal-version:   >=1.8
license:         OtherLicense
license-file:    COPYING
copyright:       © 2013-2014 Stephen Paul Weber
category:        Control
author:          Stephen Paul Weber <singpolyma@singpolyma.net>
maintainer:      Stephen Paul Weber <singpolyma@singpolyma.net>
stability:       experimental
build-type:      Simple
homepage:        https://github.com/singpolyma/unexceptionalio
bug-reports:     http://github.com/singpolyma/unexceptionalio/issues
synopsis:        IO without any non-error, synchronous exceptions
description:
        When you've caught all the exceptions that can be handled safely,
        this is what you're left with.
        .
        It is intended that you use qualified imports with this library.
        .
        > import UnexceptionalIO (UIO)
        > import qualified UnexceptionalIO as UIO

library
        exposed-modules:
                UnexceptionalIO

        build-depends:
                base == 4.*

source-repository head
        type:     git
        location: git://github.com/singpolyma/unexceptionalio.git
