name:            unexceptionalio
version:         0.4.0
cabal-version:   >=1.10
license:         OtherLicense
license-file:    COPYING
copyright:       © 2013-2018 Stephen Paul Weber
category:        Control
author:          Stephen Paul Weber <singpolyma@singpolyma.net>
maintainer:      Stephen Paul Weber <singpolyma@singpolyma.net>
stability:       experimental
build-type:      Simple
homepage:        https://github.com/singpolyma/unexceptionalio
bug-reports:     http://github.com/singpolyma/unexceptionalio/issues
synopsis:        IO without any non-error, synchronous exceptions
description:
        When you've caught all the exceptions that can be handled safely,
        this is what you're left with.
        .
        It is intended that you use qualified imports with this library.
        .
        > import UnexceptionalIO (UIO)
        > import qualified UnexceptionalIO as UIO
        .
        You may also with to investigate unexceptionalio-trans if you like
        monad transformers.
        .
        Blog post: http://sngpl.ma/p4uT0

flag mtl
  Description: Include some monad transformer support
  Default: True

library
        default-language: Haskell2010
        ghc-options: -fno-warn-tabs
        exposed-modules:
                UnexceptionalIO

        build-depends:
                base == 4.*
        if flag(mtl)
		build-depends: mtl
		cpp-options: -DMTL_SUPPORT=1

test-suite tests
        type:        exitcode-stdio-1.0
        main-is:     tests/suite.hs
        ghc-options: -O0 -fno-warn-tabs
        default-language: Haskell2010

        build-depends:
                base == 4.*,
                HUnit,
                test-framework,
                test-framework-hunit

source-repository head
        type:     git
        location: git://github.com/singpolyma/unexceptionalio.git
